[gd_scene load_steps=12 format=2]

[ext_resource path="res://Data/Scripts/World.gd" type="Script" id=1]
[ext_resource path="res://Resources/Environments/BasicSun.tscn" type="PackedScene" id=2]
[ext_resource path="res://Data/Scripts/Signal.gd" type="Script" id=3]
[ext_resource path="res://Data/Scripts/PZBMagnet.gd" type="Script" id=4]
[ext_resource path="res://Worlds/German-Safety-Tutorials/SafetyTutorialScript.gd" type="Script" id=5]
[ext_resource path="res://Data/Modules/Rail.tscn" type="PackedScene" id=6]
[ext_resource path="res://Resources/Environments/BasicWorldEnvironment.tres" type="Environment" id=7]
[ext_resource path="res://Data/Modules/Signal.tscn" type="PackedScene" id=8]
[ext_resource path="res://Data/Scripts/BuildingsNode.gd" type="Script" id=9]
[ext_resource path="res://Data/Scripts/Rail.gd" type="Script" id=10]
[ext_resource path="res://Data/Modules/PZBMagnet.tscn" type="PackedScene" id=11]

[node name="World" type="Spatial"]
script = ExtResource( 1 )
__meta__ = {
"chunk_version": 2
}
FileName = "German-Safety-Tutorials"
world_origin_on_last_save = Vector3( 0, 0, 0 )

[node name="DirectionalLight" type="DirectionalLight" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, -0.766044, 0.642787, 0, -0.642787, -0.766044, 0, 80.3552, 0 )
light_color = Color( 1, 0.958731, 0.917809, 1 )
light_bake_mode = 2
shadow_enabled = true
directional_shadow_depth_range = 1
directional_shadow_max_distance = 120.0
__meta__ = {
"color_filter": Color( 1, 1, 1, 0 ),
"color_temperature": 5900,
"use_color_temperature": true
}

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 7 )

[node name="Players" type="Spatial" parent="."]

[node name="Signals" type="Spatial" parent="."]

[node name="Signal" type="Spatial" parent="Signals" groups=["Signal"] instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 18.2883, 0, -11.4469 )
script = ExtResource( 3 )
attached_rail = "Rail"
on_rail_position = 2.0
forward = true
signal_type = 2
status = 1
signal_free_time = -1
speed = -1.0
visual_instance_path = "res://Resources/SignalTypes/Ks/Ks.tscn"
operation_mode = 0

[node name="PZBMagnet" type="Spatial" parent="Signals" instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 16.2883, 0, -11.4469 )
script = ExtResource( 4 )
attached_rail = "Rail"
on_rail_position = 0.0
forward = true
hz = 1000
attached_signal = NodePath("../Signal")

[node name="PZBMagnet2" type="Spatial" parent="Signals" instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 966.288, 0, -11.4469 )
script = ExtResource( 4 )
attached_rail = "Rail2"
on_rail_position = 750.0
forward = true
hz = 500
attached_signal = NodePath("../Signal2")

[node name="Signal2" type="Spatial" parent="Signals" groups=["Signal"] instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1216.29, 0, -11.4469 )
script = ExtResource( 3 )
attached_rail = "Rail2"
on_rail_position = 1000.0
forward = true
signal_type = 1
status = 1
signal_free_time = -1
speed = -1.0
visual_instance_path = "res://Resources/SignalTypes/Ks/Ks.tscn"
operation_mode = 0

[node name="PZBMagnet3" type="Spatial" parent="Signals" instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1214.29, 0, -11.4469 )
script = ExtResource( 4 )
attached_rail = "Rail2"
on_rail_position = 998.0
forward = true
hz = 2000
attached_signal = NodePath("../Signal2")

[node name="Signal3" type="Spatial" parent="Signals" groups=["Signal"] instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1716.29, 0, -11.4469 )
script = ExtResource( 3 )
attached_rail = "Rail3"
on_rail_position = 500.0
forward = true
signal_type = 2
status = 1
signal_free_time = -1
speed = -1.0
visual_instance_path = "res://Resources/SignalTypes/Ks/Ks.tscn"
operation_mode = 0

[node name="PZBMagnet4" type="Spatial" parent="Signals" instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1714.29, 0, -11.4469 )
script = ExtResource( 4 )
attached_rail = "Rail3"
on_rail_position = 498.0
forward = true
hz = 1000
attached_signal = NodePath("../Signal3")

[node name="PZBMagnet5" type="Spatial" parent="Signals" instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2676.29, 0, -11.4469 )
script = ExtResource( 4 )
attached_rail = "Rail5"
on_rail_position = 460.0
forward = true
hz = 500
attached_signal = NodePath("../Signal4")

[node name="Signal4" type="Spatial" parent="Signals" groups=["Signal"] instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2916.29, 0, -11.4469 )
script = ExtResource( 3 )
attached_rail = "Rail5"
on_rail_position = 700.0
forward = true
signal_type = 1
status = 1
signal_free_time = -1
speed = -1.0
visual_instance_path = "res://Resources/SignalTypes/Ks/Ks.tscn"
operation_mode = 0

[node name="PZBMagnet6" type="Spatial" parent="Signals" instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2914.29, 0, -11.4469 )
script = ExtResource( 4 )
attached_rail = "Rail5"
on_rail_position = 698.0
forward = true
hz = 2000
attached_signal = NodePath("../Signal4")

[node name="Rails" type="Spatial" parent="."]

[node name="Rail" type="Spatial" parent="Rails" groups=["Rail"] instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 16.2883, 0, -11.4469 )
script = ExtResource( 10 )
__meta__ = {
"chunk_pos": Vector3( 0, 0, 0 )
}
rail_type_path = "res://Resources/RailTypes/Default.tscn"
length = 200.0
radius = 0.0
build_distance = 0.9
visible_segments = 223
manual_moving = false
start_rot = 0.0
end_rot = 0.0
start_pos = Vector3( 16.2883, 0, -11.4469 )
end_pos = Vector3( 216.288, 0, -11.4469 )
start_slope = 0.0
end_slope = 0.0
start_tend = 0.0
tend1_pos = -1.0
tend1 = 0.0
tend2_pos = 0.0
tend2 = 0.0
end_tend = 0.0
automatic_tend = false
parallel_rail_name = ""
distance_to_parallel_rail = 0.0
has_overhead_line = true
switch_part = [ "", "" ]

[node name="Rail2" type="Spatial" parent="Rails" groups=["Rail"] instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 216.288, 0, -11.4469 )
script = ExtResource( 10 )
__meta__ = {
"chunk_pos": Vector3( 0, 0, 0 )
}
rail_type_path = "res://Resources/RailTypes/Default.tscn"
length = 1000.0
radius = 0.0
build_distance = 0.9
visible_segments = 1112
manual_moving = false
start_rot = 0.0
end_rot = 0.0
start_pos = Vector3( 216.288, 0, -11.4469 )
end_pos = Vector3( 1216.29, 0, -11.4469 )
start_slope = 0.0
end_slope = 0.0
start_tend = 0.0
tend1_pos = -1.0
tend1 = 0.0
tend2_pos = 0.0
tend2 = 0.0
end_tend = 0.0
automatic_tend = false
parallel_rail_name = ""
distance_to_parallel_rail = 0.0
has_overhead_line = true
switch_part = [ "", "" ]

[node name="Rail3" type="Spatial" parent="Rails" groups=["Rail"] instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1216.29, 0, -11.4469 )
script = ExtResource( 10 )
__meta__ = {
"chunk_pos": Vector3( 1, 0, 0 )
}
rail_type_path = "res://Resources/RailTypes/Default.tscn"
length = 1000.0
radius = 0.0
build_distance = 0.9
visible_segments = 1112
manual_moving = false
start_rot = 0.0
end_rot = 0.0
start_pos = Vector3( 1216.29, 0, -11.4469 )
end_pos = Vector3( 2216.29, 0, -11.4469 )
start_slope = 0.0
end_slope = 0.0
start_tend = 0.0
tend1_pos = -1.0
tend1 = 0.0
tend2_pos = 0.0
tend2 = 0.0
end_tend = 0.0
automatic_tend = false
parallel_rail_name = ""
distance_to_parallel_rail = 0.0
has_overhead_line = true
switch_part = [ "", "" ]

[node name="Rail4" type="Spatial" parent="Rails" groups=["Rail"] instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -483.712, 0, -11.447 )
script = ExtResource( 10 )
__meta__ = {
"chunk_pos": Vector3( 0, 0, 0 )
}
rail_type_path = "res://Resources/RailTypes/Default.tscn"
length = 500.0
radius = 0.0
build_distance = 0.9
visible_segments = 556
manual_moving = false
start_rot = 0.0
end_rot = 0.0
start_pos = Vector3( -483.712, 0, -11.447 )
end_pos = Vector3( 16.288, 0, -11.447 )
start_slope = 0.0
end_slope = 0.0
start_tend = 0.0
tend1_pos = -1.0
tend1 = 0.0
tend2_pos = 0.0
tend2 = 0.0
end_tend = 0.0
automatic_tend = false
parallel_rail_name = ""
distance_to_parallel_rail = 0.0
has_overhead_line = true
switch_part = [ "", "" ]

[node name="Rail5" type="Spatial" parent="Rails" groups=["Rail"] instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2216.29, 0, -11.4469 )
script = ExtResource( 10 )
__meta__ = {
"chunk_pos": Vector3( 2, 0, 0 )
}
rail_type_path = "res://Resources/RailTypes/Default.tscn"
length = 1000.0
radius = 0.0
build_distance = 0.9
visible_segments = 1112
manual_moving = false
start_rot = 0.0
end_rot = 0.0
start_pos = Vector3( 2216.29, 0, -11.4469 )
end_pos = Vector3( 3216.29, 0, -11.4469 )
start_slope = 0.0
end_slope = 0.0
start_tend = 0.0
tend1_pos = -1.0
tend1 = 0.0
tend2_pos = 0.0
tend2 = 0.0
end_tend = 0.0
automatic_tend = false
parallel_rail_name = ""
distance_to_parallel_rail = 0.0
has_overhead_line = true
switch_part = [ "", "" ]

[node name="Rail6" type="Spatial" parent="Rails" groups=["Rail"] instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3216.29, 0, -11.4469 )
script = ExtResource( 10 )
__meta__ = {
"chunk_pos": Vector3( 3, 0, 0 )
}
rail_type_path = "res://Resources/RailTypes/Default.tscn"
length = 1000.0
radius = 0.0
build_distance = 0.9
visible_segments = 1112
manual_moving = false
start_rot = 0.0
end_rot = 0.0
start_pos = Vector3( 3216.29, 0, -11.4469 )
end_pos = Vector3( 4216.29, 0, -11.4469 )
start_slope = 0.0
end_slope = 0.0
start_tend = 0.0
tend1_pos = -1.0
tend1 = 0.0
tend2_pos = 0.0
tend2 = 0.0
end_tend = 0.0
automatic_tend = false
parallel_rail_name = ""
distance_to_parallel_rail = 0.0
has_overhead_line = true
switch_part = [ "", "" ]

[node name="Buildings" type="Spatial" parent="."]
script = ExtResource( 9 )

[node name="Flora" type="Spatial" parent="."]

[node name="TrackObjects" type="Spatial" parent="."]

[node name="Scripting" type="Node" parent="."]
script = ExtResource( 5 )

[node name="Landscape" type="Spatial" parent="."]

[node name="Chunks" type="Spatial" parent="."]
